Added orm & controller

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                     <label for="password">Password</label>
                 </div>
 
-                <button id="login" class="btn waves-effect waves-light center collapsible purple darken-3" data-collapsible="expandable" type="submit" name="action">Sign In
+                <button id="login" class="btn waves-effect waves-light center collapsible purple darken-3 " data-collapsible="expandable" type="submit" name="action">Sign In
                 <i class="material-icons left">check_circle</i>
 
                 <button id="signup" class="btn waves-effect waves-light center collapsible purple darken-3" data-collapsible="expandable" type="submit" name="action">Create Account
@@ -128,6 +128,21 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+
+  <script type="text/javascript">
+    
+    //If admin login username and password are admin, allow access to /admin
+$("#login").on("click", function(e) {
+  e.preventDefault();
+  if ($("#adminname").val() === 'admin' && $("#password").val() === 'admin') {
+    $(location).attr('href', '/admin')
+  }
+  else {
+    var alert = $("body").prepend('<div class=" text-center alert alert-danger"><strong>Wrong Admin Username/Password!</strong></div>')
+  }
+});
+
+  </script>
 
   </body>
 </html>
