updated info page, css, etc

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <div id="index-banner" class="parallax-container z-depth-1"> 
+  <div id="index-banner" class="parallax-container z-depth-1">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
@@ -53,10 +53,10 @@
       <div class="row">
       <div class="col s12 center white">
         <h4> 21 Days is where you start.</h4>
-        <h5> Let us show you how this works. </h5>
+        <h4> Let us show you how this works. </h4>
         <p> It is widely believed that you can make or break most habits when consistently practicing a routine for 21 Days. While each habit is as different as the person trying change it, 21 Days is an app here to support your healthy habits. </p>
         <div class="info-block">
-          <a class="whitelink" href="file:///C:/Users/laure/OneDrive/Documents/GitHub/21App/public/info.html"> <button id="login" class="btn waves-effect waves-light center collapsible purple darken-3" type="submit" name="action">Learn More</a>
+          <a class="whitelink" href="info.html"> <button id="info" class="btn waves-effect waves-light center collapsible purple darken-3" type="submit" name="action">Learn More</a>
           <i class="material-icons left">info</i>
         </div>
           <ul class="collapsible" data-collapsible="accordion">
@@ -99,11 +99,11 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 light purplelink">Change your life in 21 days.</h4>
+          <h4 class="header col s12 light text-white">Change your life in 21 days.</h4>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="images/background4.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <footer class="page-footer purple darken-3">
