--- a/public/info.html
+++ b/public/info.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div id="index-banner" class="parallax-container z-depth-1">
-    <div class="section no-pad-bot"> 
+    <div class="section no-pad-bot">
       <div class="container">
         <br><br>
         <div class="row center">
@@ -49,7 +49,30 @@
   <div class="container" id="access">
     <div class="section">
 
-        <h3> What is 21? <h3>
+        <img class="-align" src="images/whatis21.png">
+          <h5 class="left-align"> We're beings of routine, and change can be difficult, inconvenient, and sometimes worrisome.
+            When it comes to habits, we're often not conscious of the cravings that drive those routines.
+            Safe Space has an app that allows for users to anonymously share, stare, and be aware of their behavior driving habits; to root and resolve the matter.
+          </h5>
+
+
+            <img class="center" src="images/info2.jpeg">
+
+
+            <h5 class="left-align">
+            With 21App, we’re focusing on the top three habitual life suckers: smoking, technology, and shopping. Our app connects people with liked goals, to crowd source and break their habits.
+            <br>
+            <br>
+            Safe Space Inspiration...
+            Team Safe Space has created an app that allows for users to create an account, pick from one of the top 3 habits I just mentioned: smoking, shopping, and technology; and create an atmosphere of anonymous accountability. How does it do this?
+            21App is connecting people with liked goals, utilizing crowd sourcing, to help break these bad habits, and provides the challenge to coach others.  Our challenge was ensuring we all understood every aspect of our project, especially with MVC concepts.
+            <h5>
+
+              <div class="info-block">
+                <a class="whitelink" href="index.html"> <button class="btn waves-effect waves-light center collapsible purple darken-3" type="submit" name="action">Sign Up Now...</a>
+                <i class="material-icons left">info</i>
+              </div>
+
 
         </div> <!--end of dropdown-->
       </div>
@@ -60,11 +83,11 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 light purplelink">Change your life in 21 days.</h4>
+          <h3 class="header col s12 light purplelink">21. Start Today.</h3>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="images/background3.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <footer class="page-footer purple darken-3">
