--- a/public/info.html
+++ b/public/info.html
@@ -83,7 +83,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h3 class="header col s12 light purplelink">21. Start Today.</h3>
+          <h3 class="header col s12 light text-white">21. Start Today.</h3>
         </div>
       </div>
     </div>
