--- a/public/index.html
+++ b/public/index.html
@@ -46,25 +46,18 @@
   </nav>
 
 
-  <div class="container" id="access">
+  <div class="container" id="options">
     <div class="section">
 
       <!--   log in   -->
       <div class="row">
       <div class="col s12 center white">
-        <h4> 21 Days is where you start.</h4>
-        <h5> Let us show you how this works. </h5>
-        <p> It is widely believed that you can make or break most habits when consistently practicing a routine for 21 Days. While each habit is as different as the person trying change it, 21 Days is an app here to support your healthy habits. </p>
-        <div class="info-block">
-          <a class="whitelink" href="file:///C:/Users/laure/OneDrive/Documents/GitHub/21App/public/info.html"> <button id="login" class="btn waves-effect waves-light center collapsible purple darken-3" type="submit" name="action">Learn More</a>
-          <i class="material-icons left">info</i>
-        </div>
           <ul class="collapsible" data-collapsible="accordion">
             <h2 class="center purple-text text-darken-3">
               <i class="material-icons itopnav medium">perm_identity</i></h2>
             <li>
               <div class="collapsible-header">
-                <h5 class="center padding-20">Get Started</h5>
+                <h5 class="center padding-20">Log In</h5>
               </div>
               <div class="collapsible-body">
 
@@ -78,20 +71,90 @@
                     <label for="password">Password</label>
                 </div>
 
-                <button id="login" class="btn waves-effect waves-light center collapsible purple darken-3 " data-collapsible="expandable" type="submit" name="action">Sign In
-                <i class="material-icons left">check_circle</i>
-
-                <button id="signup" class="btn waves-effect waves-light center collapsible purple darken-3" data-collapsible="expandable" type="submit" name="action">Create Account
+                <button id="login" class="btn waves-effect waves-light center collapsible purple darken-3" data-collapsible="expandable" type="submit" name="action">Sign In
                 <i class="material-icons left">check_circle</i>
                 <br>
 
               </div> <!--end of dropdown-->
             </li>
-          <p class="light center"><i>Change your life today.</i></p>
+          <p class="light center"><i>Sign in to your account.</i></p>
         </div>
       </div>
+
+
+        <div class="row">
+        <!-- sign up -->
+        <div class="col s12 center white">
+            <ul class="collapsible" data-collapsible="accordion">
+              <h2 class="center purple-text text-darken-3">
+                <i class="material-icons itopnav medium">add_circle</i></h2>
+              <li>
+                <div class="collapsible-header">
+                  <h5 class="center padding-20">Sign Up</h5>
+                </div>
+                <div class="collapsible-body">
+
+                  <div class="row">
+                      <div class="input-field col s6">
+                        <input id="first_name" type="text" class="validate">
+                        <label for="first_name">First Name</label>
+                      </div>
+                      <div class="input-field col s6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                      </div>
+                    </div>
+
+                  <div class="input-field col s12">
+                        <input id="email" type="email" class="validate">
+                        <label for="email">Email</label>
+                  </div>
+
+                  <div class="input-field col s12">
+                      <input id="password" type="password" class="validate">
+                      <label for="password">Password</label>
+                  </div>
+
+                      <label>Habit To Break:</label>
+                          <select class="browser-default center">
+                            <option value="" disabled selected class="center">Select</option>
+                            <option value="smoking">Smoking</option>
+                            <option value="shopping">Shopping</option>
+                            <option value="technology">Technology</option>
+                          </select>
+
+
+                          <form action="#">
+                              <p class="center">
+                                <input type="checkbox" id="smoking" />
+                                <label for="smoking">I agree to the terms & conditions</label>
+                              </p>
+
+                  <button id="login" class="btn waves-effect waves-light center collapsible purple darken-3" data-collapsible="expandable" type="submit" name="action">Sign Up
+                  <i class="material-icons left">check_circle</i>
+                  <br>
+
                 </div> <!--end of dropdown-->
+              </li>
+            <p class="light center"><i>Create a new account.</i></p>
+          </div>
+        </div>
       </div>
+
+
+        <div class="row">
+        <!-- info -->
+        <div class="col s12 center white">
+            <div class="icon-block">
+              <h2 class="center white-text purple-text text-darken-3"><i class="material-icons">info</i></h2>
+              <button id="login" class="btn waves-effect waves-light center collapsible purple darken-3" type="submit" name="action">Learn More
+              <i class="material-icons left">check_circle</i>
+              <p class="light center">Learn how 21 works.</p>
+              <br>
+            </div>
+        </div>
+
+      </div> <!-- end of row -->
     </div> <!-- end of section -->
   </div> <!-- end of container -->
 
@@ -129,7 +192,7 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 
-  <script type="text/javascript">
+<!--   <script type="text/javascript">
     
     //If admin login username and password are admin, allow access to /admin
 $("#login").on("click", function(e) {
@@ -142,7 +205,7 @@ $("#login").on("click", function(e) {
   }
 });
 
-  </script>
+  </script> -->
 
   </body>
 </html>
