--- a/public/home.html
+++ b/public/home.html
@@ -30,7 +30,7 @@
   <nav class="purple darken-3 z-depth-2" role="navigation">
     <div class="nav-wrapper center text-white">
       <ul class="text-white center navi">
-        <li><a href="me.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="world.html">World</a></li>
         <li><a href="support.html">Support</a><i class="material-icons">favorite</i></li>
       </ul>
@@ -45,7 +45,7 @@
 <!--Support Page-->
   <div class="row">
      <div class="col s12 m6">
-       <div class="card medium sticky-action">
+       <div class="card large sticky-action">
          <div class="card-image">
             <img src="https://pbs.twimg.com/profile_images/654052237929414656/YUI--ZV8.jpg">
             <span class="card-title">User Name</span>
@@ -55,37 +55,11 @@
            <p>I am quitting smoking.</p>
          </div>
          <div class="card-action">
-           <a class="purple link" href="#">Support User</a>
-           <a class="purple link" href="#">Add Friend</a>
+           <a class="purple link" href="#">Request Help From The World</a>
          </div>
        </div>
      </div>
    </div>
-
-   <div class="row">
-      <div class="col s12 m6">
-        <div class="card medium sticky-action">
-          <div class="card-image">
-             <img src="http://s1.ibtimes.com/sites/www.ibtimes.com/files/styles/lg/public/2015/09/01/miss-piggy.png">
-             <span class="card-title">User Name</span>
-           </div>
-          <div class="card-content">
-            <span class="card-title">On day 5</span>
-            <p>I am quitting shopping.</p>
-          </div>
-          <div class="card-action">
-            <a href="#" class="purplelink">Support User</a>
-            <a href="#" class="purplelink">Add Friend</a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-
 
 
 
