--- a/public/home.html
+++ b/public/home.html
@@ -37,33 +37,40 @@
     </div>
   </nav>
 
-<div class="col s12 m7">
-  <br>
-  <p> This is the dynamic area. </p>
-
-
-<!--Support Page-->
+<div class="container">
   <div class="row">
-     <div class="col s12 m6">
-       <div class="card large sticky-action">
-         <div class="card-image">
-            <img src="https://pbs.twimg.com/profile_images/654052237929414656/YUI--ZV8.jpg">
-            <span class="card-title">User Name</span>
-          </div>
-         <div class="card-content">
-           <span class="card-title">On day 14</span>
-           <p>I am quitting smoking.</p>
-         </div>
-         <div class="card-action">
-           <a class="purple link" href="#">Request Help From The World</a>
-         </div>
-       </div>
-     </div>
-   </div>
+    <div class="col s12">
+      <h3> Welcome Back, John Doe. </h3>
+      <h5> You're on day 18 of 21. </h5>
 
-
+      <div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img width="200" src="https://static.pexels.com/photos/9687/pexels-photo.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+          <p> John | 30 | Orlando, Florida <br> Quitting Smoking</p>
+        </div>
+        <div class="card-action">
+          <a href="#" class="purple-text">Daily Check In</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+<div class="collection">
+     <a href="#!" class="collection-item purple-text">Support Requests<span class="badge">1</span></a>
+     <a href="#!" class="collection-item purple-text">New Friend Request<span class="new badge">4</span></a>
+   </div>
+ </div>
+ </div>
+</div> <!--end of container-->
 
   <footer class="page-footer purple darken-3">
     <div class="container">
