Tweaked HTML for routing

--- a/public/home.html
+++ b/public/home.html
@@ -30,9 +30,9 @@
   <nav class="purple darken-3 z-depth-2" role="navigation">
     <div class="nav-wrapper center text-white">
       <ul class="text-white center navi">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="world.html">World</a></li>
-        <li><a href="support.html">Support</a><i class="material-icons">favorite</i></li>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/world">World</a></li>
+        <li><a href="/supoort">Support</a><i class="material-icons">favorite</i></li>
       </ul>
     </div>
   </nav>
