--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
         <h4> Let us show you how this works. </h4>
         <p> It is widely believed that you can make or break most habits when consistently practicing a routine for 21 Days. While each habit is as different as the person trying change it, 21 Days is an app here to support your healthy habits. </p>
         <div class="info-block">
-          <a class="whitelink" href="/info"> <button id="info" class="btn waves-effect waves-light center collapsible purple darken-3" type="submit" name="action">Learn More</a>
+          <a class="whitelink" href="/info"> <button id="info" class="btn waves-effect waves-light center collapsible purple darken-3" type="submit">Learn More</a>
           <i class="material-icons left">info</i>
         </div>
 
