--- a/public/info.html
+++ b/public/info.html
@@ -71,7 +71,7 @@
             <h5>
 
               <div class="info-block">
-                <a class="whitelink" href="/index"> <button class="btn waves-effect waves-light center collapsible purple darken-3" type="submit" name="action">Sign Up Now...</a>
+                <a class="whitelink" href="/index"> <button class="btn waves-effect waves-light center collapsible purple darken-3" type="submit">Sign Up Now...</a>
                 <i class="material-icons left">info</i>
               </div>
 
